# bounce-game

./: CMakeLists.txt  README.md  details.txt
app/: Camera.cpp  Camera.h  LightRenderer.cpp  LightRenderer.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Renderer.cpp  Renderer.h  ShaderLoader.cpp  ShaderLoader.h  TextRenderer.cpp  TextRenderer.h  TextureLoader.cpp  TextureLoader.h  main.cpp
assets/: FlatModel.vs
assets/shader/: LitTexturedModel.fs  LitTexturedModel.vs  TexturedModel.fs  TexturedModel.vs  text.fs
